--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Formulario</title>
 </head>
 <body>
+    <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-auth.js"></script>
     <form action="">
         <img class="logo" src="static/logo.png" alt="UTN">
         <p>*Nombre del responsable</p>       
