--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Formulario</title>
 </head>
 <body>
+     <script src="Js/ident.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-auth.js"></script>
     <form action="">
