--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Formulario</title>
 </head>
 <body>
+        <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-auth.js"></script>
+    script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
+    <script src="Js/ident.js"> </script>
     <form action="">
         <img class="logo" src="static/logo.png" alt="UTN">
         <p>*Nombre del responsable</p>       
@@ -24,8 +28,5 @@
         <p>Favor de revisar los datos antes de enviar</p>
         <input type="submit" value="Enviar" >
     </form>
-    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.4.1/firebase-auth.js"></script>
-    <script src="Js/ident.js"> </script>
 </body>
 </html>
